L9 login logout fixed
  - api yaml changes for x-consumer-username header where it was missing
